syntax = "proto3";

package events;
option go_package = "gitlab.ozon.dev/mr.eskov1/telegram-bot/internal/generated/proto/events";
import "google/protobuf/timestamp.proto";

message Event {
  message GenerateReport {
    message ByCategories {
      google.protobuf.Timestamp since = 1;
      google.protobuf.Timestamp till = 2;
    }
    int64 chat_id = 1;
    int64 user_id = 2;
    reserved 3 to 9;
    oneof request {
      ByCategories by_categories = 10;
    }
  }
  reserved 1 to 9;
  oneof value {
    GenerateReport generate_report = 10;
  }
}
